sam-internal/k8s-out/dfw/dfw-sam/electron-opa-injector-register-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    manifestctl.sam.data.sfdc.net/swagger: disable
  labels:
    app: electron-opa-injector
  name: electron-opa-injector-cfg
webhooks:
- clientConfig:
    caBundle: IwojIFRISVMgRklMRSBJUyBGT1IgUFJPRFVDVElPTiBPTkxZCiMKIyBOT1RFOiBETyBOT1QgTEVBVkUgQU4gRU1QVFkgTElORSBBVCBUSEUgRU5EIE9GIFRISVMgRklMRQojCiMgVXNlOiBrZXl0b29sIC1wcmludGNlcnQgLXYgLWZpbGUgY2FjZXJ0cy5wZW0KIwojCiMgT3duZXI6IENOPXNhbGVzZm9yY2UuY29tIEludGVybmFsIFJvb3QgQ0EgMSwgTz0ic2FsZXNmb3JjZS5jb20sIGluYy4iLCBDPVVTCiMgSXNzdWVyOiBDTj1zYWxlc2ZvcmNlLmNvbSBJbnRlcm5hbCBSb290IENBIDEsIE89InNhbGVzZm9yY2UuY29tLCBpbmMuIiwgQz1VUwojIFNlcmlhbCBudW1iZXI6IGRhZDI4ZDg0M2ZjNzMzMjVkNGMxYTc1MjA3ZDRlNzQKIyBWYWxpZC [...]
    url: https://electron-opa-injector.authz-opa-webhook.svc.dfw-sam.dfw.sam.sfdc.net:17442/mutate
  failurePolicy: Ignore
  name: electron-opa-injector.authz.svc
  namespaceSelector:
    matchLabels:
      electron-opa-injection: enabled
  rules:
  - apiGroups:
    - apps
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
